<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/common/assets/res/any/strings.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>
    <string name="app_label">Spare Parts</string>

    <string name="device_info_title">Device info</string>
    
    <string name="title_battery_history">Battery history</string>
    <string name="summary_battery_history">Summary of how battery has been used</string>
    
    <string name="title_battery_information">Battery information</string>
    <string name="summary_battery_information">Current battery status information</string>
    
    <string name="title_usage_statistics">Usage statistics</string>
    <string name="summary_usage_statistics">Summary of application usage</string>
    
    <string name="general_title">General</string>
    
    <string name="title_recent_apps_num">Number of recent apps</string>
    <string name="summary_recent_apps_num">Number of recent apps to display on long press home</string>
    <string name="dialog_title_recent_apps_num">Specify number of recent apps</string>
    
    <string name="title_window_animations">Window animations</string>
    <string name="summary_window_animations">Speed of animations in individual windows</string>
    <string name="dialog_title_window_animations">Select window speed</string>
    
    <string name="title_transition_animations">Transition animations</string>
    <string name="summary_transition_animations">Speed of animations moving between screens</string>
    <string name="dialog_title_transition_animations">Select transition speed</string>
    
    <string name="title_fancy_ime_animations">Fancy input animations</string>
    <string name="summary_on_fancy_ime_animations">Use fancier animations for input method windows</string>
    <string name="summary_off_fancy_ime_animations">Use normal animations for input method windows</string>
    
    <string name="title_haptic_feedback">Haptic feedback</string>
    <string name="summary_on_haptic_feedback">Use haptic feedback with user interaction</string>
    <string name="summary_off_haptic_feedback">Use haptic feedback with user interaction</string>
    
     <string name="title_end_button">End button behavior</string>
    <string name="summary_end_button">Select End (red) button action</string>
    <string name="dialog_title_end_button">Select End button</string>
    
    <string name="applications_title">Applications</string>
    
    <string name="title_pin_home">Launcher in memory</string>
    <string name="summary_on_pin_home">Launcher will attempt to to stay in memory</string>
    <string name="summary_off_pin_home">Launcher will not be locked in memory</string>

    <string name="title_launcher_orientation">Launcher rotation</string>
    <string name="summary_on_launcher_orientation">Launcher will auto-orientate using accelerometer</string>
    <string name="summary_off_launcher_orientation">Launcher will not auto-orientate</string>

    <string name="title_launcher_columns">Compact launcher</string>
    <string name="summary_on_launcher_columns">5 columns of icons per row (requires restart)</string>
    <string name="summary_off_launcher_columns">4 columns of icons per row (requires restart)</string>

    <string name="battery_status_title">Battery status display</string>
    <string name="battery_status_summary_on">Battery percentage will be displayed in status bar</string>
    <string name="battery_status_summary_off">Battery percentage will not be displayed in status bar</string>    
    <string name="battery_status_color_title">Battery percentage color</string>

	<string name="title_compcache_enabled">Compcache enabled</string>
	<string name="summary_on_compcache_enabled">Compressed caching is enabled</string>
	<string name="summary_off_compcache_enabled">Compressed caching is disabled</string>

	<!-- Double Carrier -->
    
    <string name="title_plmn">Settings for PLMN carrier string</string>

	<string name="title_show_plmn_ls">Display PLMN (lockscreen)</string>
	<string name="summary_on_show_plmn_ls">PLMN field is displayed on lockscreen</string>
	<string name="summary_off_show_plmn_ls">PLMN field is not displayed on lockscreen</string>

	<string name="title_show_plmn_sb">Display PLMN (status bar)</string>
	<string name="summary_on_show_plmn_sb">PLMN field is displayed in status bar</string>
	<string name="summary_off_show_plmn_sb">PLMN field is not displayed in status bar</string>


    <string name="title_spn">Settings for SPN carrier string</string>

	<string name="title_show_spn_ls">Display SPN (lockscreen)</string>
	<string name="summary_on_show_spn_ls">SPN field is displayed on lockscreen</string>
	<string name="summary_off_show_spn_ls">SPN field is not displayed on lockscreen</string>

	<string name="title_show_spn_sb">Display SPN (status bar)</string>
	<string name="summary_on_show_spn_sb">SPN field is displayed in status bar</string>
	<string name="summary_off_show_spn_sb">SPN field is not displayed in status bar</string>

	
    <!-- Sound & display settings screen, compatibility mode check box label -->
    <string name="compatibility_mode_title">Compatibility mode</string>
    <!-- Sound & display settings screen, compatibility mode option summary text when check box is selected -->
    <string name="compatibility_mode_summary_on">Run older apps in Compatibility mode. This require rebooting. </string>
    <!-- Sound & display settings screen, compatibility mode option summary text when check box is clear -->
    <string name="compatibility_mode_summary_off">Run older apps in Compatibility mode. This require rebooting. </string>
    
    <string name="title_ui_tweaks">User interface tweaks - Reboot required</string>
    
    <string name="title_general_color_tweaks">General</string>
    <string name="summary_general_color_tweaks">Clock, date, battery, carrier, etc.</string>
    
    <string name="title_show_clock">Show clock</string>
    <string name="title_clock_color">Clock color</string>
    <string name="title_date_color">Date color</string>
    <string name="title_spn_label_color">Carrier SPN label color</string>
    <string name="title_plmn_label_color">Carrier PLMN label color</string>
    
    <string name="title_notifications_color_tweaks">Notifications</string>
    <string name="summary_notifications_color_tweaks">Notifications ticker, ongoing notifications, latest notifications, clear notifications, etc.</string>    
    <string name="title_notifications_ticker_color">Notifications ticker color</string>
    <string name="title_notifications_count_color">Notifications count color</string>
    <string name="title_no_notifications_color">No notification title color</string>
    <string name="title_clear_button_label_color">Clear notifications label color</string>    
    <string name="title_ongoing_notifications_color">Ongoing notifications title color</string>    
    <string name="title_latest_notifications_color">Latest notifications title color</string>
    <string name="title_notifications_items">Notification items colors</string>
    <string name="title_notifications_items_title">Items title color</string>
    <string name="title_notifications_items_text">Items text color</string>
    <string name="title_notifications_items_time">Items time color</string>
    <string name="title_reset_ui_tweaks_to_defaults">Reset UI tweaks to default</string>
    <string name="title_import_from_xml">Import colors from XML</string>
    <string name="summary_import_from_xml">Import colors from /sdcard/spare_parts_ui.xml</string>
    <string name="title_export_to_xml">Export colors to XML</string>
    <string name="summary_export_to_xml">Export colors to /sdcard/spare_parts_ui.xml</string>
    
    <string name="title_dialog_ui_interface">UI interface tweaks</string>
    <string name="message_dialog_reset">Reset all UI interface tweaks to default? Reboot to see changes.</string>
    <string name="message_dialog_import">Import UI colors from XML? Reboot to see changes.</string>
    <string name="message_dialog_export">Export UI colors to XML? This will overwrite the existing file.</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="msg_color_picker">Tap on center color to confirm.\nPress back to cancel.</string>
    <string name="reset_ui_success">UI interface tweaks reset! Reboot to see changes.</string>
    
    <!-- XML Import/Export strings -->
    <string name="xml_file_not_found">XML file not found!</string>
    <string name="xml_io_exception">Error reading file!</string>
    <string name="xml_parse_error">Error parsing XML!</string>
    <string name="xml_invalid_color">Invalid color code in XML!</string>
    <string name="xml_import_success">XML import successful! Reboot to see changes.</string>    
    <string name="xml_write_error">Error writing XML!</string>
    <string name="xml_export_success">XML export successful!</string>    
    <string name="xml_sdcard_unmounted">SD card not mounted!</string>
    
</resources>
