<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/device_info_title">

        <PreferenceScreen android:key="battery_history_settings"
                android:title="@string/title_battery_history" 
                android:summary="@string/summary_battery_history">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.battery_history.BatteryHistory" />
        </PreferenceScreen>
        
        <PreferenceScreen android:key="battery_information_settings"
                android:title="@string/title_battery_information" 
                android:summary="@string/summary_battery_information">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.BatteryInfo" />
        </PreferenceScreen>
        
        <PreferenceScreen android:key="usage_statistics_settings"
                android:title="@string/title_usage_statistics" 
                android:summary="@string/summary_usage_statistics">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.UsageStats" />
        </PreferenceScreen>
        
    </PreferenceCategory>
            
    <PreferenceCategory
        android:title="@string/general_title">
        
        <ListPreference
                android:key="recent_apps_num"
                android:title="@string/title_recent_apps_num"
                android:summary="@string/summary_recent_apps_num"
                android:entries="@array/entries_recent_apps_num"
                android:entryValues="@array/entries_recent_apps_num"
                android:dialogTitle="@string/dialog_title_recent_apps_num" />
        
        <ListPreference
                android:key="window_animations"
                android:title="@string/title_window_animations"
                android:summary="@string/summary_window_animations"
                android:entries="@array/entries_animations"
                android:entryValues="@array/entryvalues_animations"
                android:dialogTitle="@string/dialog_title_window_animations" />
                
        <ListPreference
                android:key="transition_animations"
                android:title="@string/title_transition_animations"
                android:summary="@string/summary_transition_animations"
                android:entries="@array/entries_animations"
                android:entryValues="@array/entryvalues_animations"
                android:dialogTitle="@string/dialog_title_transition_animations" />
        
        <CheckBoxPreference 
            android:key="fancy_ime_animations" 
            android:title="@string/title_fancy_ime_animations" 
            android:summaryOn="@string/summary_on_fancy_ime_animations"
            android:summaryOff="@string/summary_off_fancy_ime_animations"/>

        <ListPreference
                android:key="end_button"
                android:title="@string/title_end_button"
                android:summary="@string/summary_end_button"
                android:entries="@array/entries_end_button"
                android:entryValues="@array/entryvalues_end_button"
                android:dialogTitle="@string/dialog_title_end_button" />
        
        <CheckBoxPreference 
            android:key="haptic_feedback" 
            android:title="@string/title_haptic_feedback" 
            android:summaryOn="@string/summary_on_haptic_feedback"
            android:summaryOff="@string/summary_off_haptic_feedback"/>
        

        <CheckBoxPreference
                android:key="compatibility_mode"
                android:title="@string/compatibility_mode_title"
                android:summaryOn="@string/compatibility_mode_summary_on"
                android:summaryOff="@string/compatibility_mode_summary_off" />

        <CheckBoxPreference
            android:key="compcache_enabled"
            android:title="@string/title_compcache_enabled"
            android:summaryOn="@string/summary_on_compcache_enabled"
            android:summaryOff="@string/summary_off_compcache_enabled" />

    </PreferenceCategory>
            
    <PreferenceCategory
        android:title="@string/applications_title">

        <CheckBoxPreference
            android:key="launcher_orientation"
            android:title="@string/title_launcher_orientation"
            android:summaryOn="@string/summary_on_launcher_orientation"
            android:summaryOff="@string/summary_off_launcher_orientation" />

        <CheckBoxPreference
            android:key="launcher_columns"
            android:title="@string/title_launcher_columns"
            android:summaryOn="@string/summary_on_launcher_columns"
            android:summaryOff="@string/summary_off_launcher_columns" />

        
        <CheckBoxPreference
            android:key="pin_home"
            android:title="@string/title_pin_home"
            android:summaryOn="@string/summary_on_pin_home"
            android:summaryOff="@string/summary_off_pin_home" />

    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/title_ui_tweaks">
        
        <PreferenceScreen
                android:title="@string/title_general_color_tweaks" 
                android:summary="@string/summary_general_color_tweaks">
                
            <CheckBoxPreference
                android:key="battery_status"
                android:title="@string/battery_status_title"
                android:summaryOn="@string/battery_status_summary_on"
                android:summaryOff="@string/battery_status_summary_off"
                android:disableDependentsState="false" />        
                
            <Preference android:key="battery_status_color_title"
                android:title="@string/battery_status_color_title"
                android:defaultValue="-1"
                android:dependency="battery_status" />
                
            <CheckBoxPreference
                android:key="show_status_clock"
                android:title="@string/title_show_clock"
                android:disableDependentsState="false" />
                
            <Preference android:key="clock_color"
                android:title="@string/title_clock_color"
                android:defaultValue="-16777216"
                android:dependency="show_status_clock" />
            
            <Preference android:key="date_color"
                android:title="@string/title_date_color"
                android:defaultValue="-16777216" />
		
				<!-- Double Carrier - bcrook shenanigans -->
    	<PreferenceCategory
        	android:title="@string/title_plmn">

		    <CheckBoxPreference 
		        android:key="show_plmn_ls" 
		        android:title="@string/title_show_plmn_ls" 
		        android:summaryOn="@string/summary_on_show_plmn_ls"
		        android:summaryOff="@string/summary_off_show_plmn_ls"
				android:defaultValue="true" />

		    <CheckBoxPreference 
		        android:key="show_plmn_sb" 
		        android:title="@string/title_show_plmn_sb" 
		        android:summaryOn="@string/summary_on_show_plmn_sb"
		        android:summaryOff="@string/summary_off_show_plmn_sb"
				android:defaultValue="true" 
                android:disableDependentsState="false" />

            <Preference android:key="plmn_label_color"
                android:title="@string/title_plmn_label_color"
                android:defaultValue="-16777216"
                android:dependency="show_plmn_sb" />

       	</PreferenceCategory>

    	<PreferenceCategory
        	android:title="@string/title_spn">

		    <CheckBoxPreference 
		        android:key="show_spn_ls" 
		        android:title="@string/title_show_spn_ls" 
		        android:summaryOn="@string/summary_on_show_spn_ls"
		        android:summaryOff="@string/summary_off_show_spn_ls"
				android:defaultValue="true" />

		    <CheckBoxPreference 
		        android:key="show_spn_sb" 
		        android:title="@string/title_show_spn_sb" 
		        android:summaryOn="@string/summary_on_show_spn_sb"
		        android:summaryOff="@string/summary_off_show_spn_sb"
				android:defaultValue="true" 
                android:disableDependentsState="false" />
                
            <Preference android:key="spn_label_color"
                android:title="@string/title_spn_label_color"
                android:defaultValue="-16777216"
                android:dependency="show_spn_sb" />

      	</PreferenceCategory>
              
        </PreferenceScreen>
        
        <PreferenceScreen
                android:title="@string/title_notifications_color_tweaks" 
                android:summary="@string/summary_notifications_color_tweaks">
            
            <Preference
                android:key="new_notifications_ticker_color"
                android:title="@string/title_notifications_ticker_color"
                android:defaultValue="-16777216" />
                
            <Preference
                android:key="notifications_count_color"
                android:title="@string/title_notifications_count_color"
                android:defaultValue="-1" />
                
            <Preference
                android:key="no_notifications_color"
                android:title="@string/title_no_notifications_color"
                android:defaultValue="-1" />
                
            <Preference
                android:key="clear_button_label_color"
                android:title="@string/title_clear_button_label_color"
                android:defaultValue="-16777216" />
                
            <Preference
                android:key="ongoing_notifications_color"
                android:title="@string/title_ongoing_notifications_color"
                android:defaultValue="-1" />
                
            <Preference
                android:key="latest_notifications_color"
                android:title="@string/title_latest_notifications_color"
                android:defaultValue="-1" />
                
            <PreferenceCategory
                android:title="@string/title_notifications_items">           

                <Preference
                    android:key="notifications_title_color"
                    android:title="@string/title_notifications_items_title"
                    android:defaultValue="-16777216" />
                    
                <Preference
                    android:key="notifications_text_color"
                    android:title="@string/title_notifications_items_text"
                    android:defaultValue="-16777216" />
                    
                <Preference
                    android:key="notifications_time_color"
                    android:title="@string/title_notifications_items_time"
                    android:defaultValue="-16777216" />
                    
            </PreferenceCategory>
        </PreferenceScreen>
        
        <Preference
            android:key="reset_ui_tweaks_to_defaults"
            android:title="@string/title_reset_ui_tweaks_to_defaults" />

        <Preference
            android:key="import_from_xml"
            android:title="@string/title_import_from_xml"
            android:summary="@string/summary_import_from_xml" />
            
        <Preference
            android:key="export_to_xml"
            android:title="@string/title_export_to_xml"
            android:summary="@string/summary_export_to_xml" /> 
            
    </PreferenceCategory>
        
</PreferenceScreen>
